Fixed horizontal scrollbar on the module list page

--- a/view/adminhtml/web/css/swissup.less
+++ b/view/adminhtml/web/css/swissup.less
@@ -3,3 +3,10 @@
     background: url(../images/logo-monochrome.svg) no-repeat 50% 50%;
     background-size: 45px auto;
 }
+
+.swissup-installer-index {
+    .data-grid td .action-menu {
+        // keep actions dropdown inside a grid to prevent horizontal scrollbar
+        right: 0;
+    }
+}
